# BunduKhan

./: .cpanel.yml  db.sqlite3  passenger_wsgi.py  pyproject.toml  requirements.txt
ClientRequest/: apps.py  models.py
comments/: admin.py  models.py
comments/migrations/: 0001_initial.py  0002_comment_website.py  0003_rename_website_comment_your_job.py
location/: admin.py  models.py
location/migrations/: 0001_initial.py  0002_rename_province_city_province.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_contact_postcode.py  0003_subscriber.py  0004_appoinment.py  0005_alter_contact_phone_number.py  0006_herosectionproperty_propertystatus_delete_appoinment_and_more.py  0007_herosectionproperty_price.py  0008_delete_herosectionproperty_delete_propertystatus.py  0009_submittedproperties.py  0010_remove_submittedproperties_postcode.py
property/: admin.py  models.py
property/migrations/: 0001_initial.py  0002_rename_properties_property.py  0003_property_image_delete_propertyimage.py  0004_property_name.py  0005_property_propertyarea.py  0006_propertystatus.py  0007_property_status.py  0008_property_creator.py  0009_rename_image_property_image1_property_image2.py  0010_property_full_house_image_property_image3_and_more.py  (+10 more)
realestate/: settings.py  urls.py
templates/: Greeting.html  about.html  agents.html  base.html  blog-details.html  blog.html  builderhome.html  comingsoon.html  contact.html  index.html  login.html  profile.html  property-details.html  property-submit.html  property.html  signin.html
(+14 files in other folders)
